dev branch push

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div id="intro">
 
-            <span id="hero" contenteditable="true">today I am going to...</span>
+            <span id="goal" contenteditable="true">today I am going to...</span>
 
             <div id="control">
                 <i id="refresh" class="fas fa-sync-alt"></i>
@@ -23,22 +23,13 @@
                 <a id="check"><i class="fas fa-check"></i></a>
             </div>
 
-
-
-            <!--
-         <form name="hero">
-                    <input type="text" id="hero" name="hero" value="today I am going to excerise">  
-         </form>
-        -->
-
-
         </div>
-
-
 
     </div>
 
-</body></html>
+</body>
+
+</html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="styles.css">
 <script src="script.js"> </script>
