fixed stuff to work

--- a/mygoal.html
+++ b/mygoal.html
@@ -11,10 +11,22 @@
 <body>
 
 
-    <div class=content id="tan" style="height:100%; text-align:center;">
+    <div class=content id="tan" style="height:100%; text-align:center; font-size: 200%;">
 
-            <span id="goal"></span>
- 
+        <span id="goal">today i am going to...</span>
+        <br>
+        <br>
+        <input type="text" id="textfomr" name="textform" placeholder="+">
+        <br>
+        <input type="text" id="textfomr" name="textform" placeholder="+">
+        <br>
+        <input type="text" id="textfomr" name="textform" placeholder="+">
+        <br>
+        <input type="text" id="textfomr" name="textform" placeholder="+">
+        <br>
+        <input type="text" id="textfomr" name="textform" placeholder="+">
+
+
     </div>
 
 </body></html>
