--- a/mygoal.html
+++ b/mygoal.html
@@ -13,7 +13,7 @@
 
     <div class=content id="tan" style="height:100%; text-align:center; font-size: 200%;">
 
-        <span id="goal">today i am going to...</span>
+        <span id="goal">today i am going read</span>
         <br>
         <br>
         <input type="text" id="textfomr" name="textform" placeholder="+">
