--- a/index.html
+++ b/index.html
@@ -6,26 +6,15 @@
     <title> </title>
 
     <script src="https://kit.fontawesome.com/c7964b2e58.js" crossorigin="anonymous"></script>
+    
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    
 </head>
 
 <body>
-
-
     <div class=content id="tan" style="height:100%">
-<!--        <p>Lauren</p>-->
-
-        <div id="intro">
-
-            <span id="goal" contenteditable="true">today I am going to...</span>
-
-            <div id="control">
-                <i id="refresh" class="fas fa-sync-alt"></i>
-                <i id="new" class="fas fa-sticky-note"></i>
-                <a id="check"><i class="fas fa-check"></i></a>
-            </div>
-
-        </div>
-
+<!--        displays different views-->
+        <div id="pageContainer" data-include="landing"></div>
     </div>
 
 </body>
