--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 
 <body>
+   
     <div class=content id="tan" style="height:100%">
-<!--        displays different views-->
+        <!-- holds the view -->
         <div id="pageContainer" data-include="landing"></div>
     </div>
 
@@ -21,5 +22,6 @@
 
 </html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link rel="stylesheet" href="styles.css">
 <script src="script.js"> </script>
