reworked landing page icons to be more editable

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
    
-    <div class=content id="tan" style="height:100%">
+    <div class="content tan" style="height:100%">
        
         <!-- holds the view -->
         <div id="pageContainer" data-include="landing"></div>
