some lil things idrk

--- a/styleGuide.html
+++ b/styleGuide.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> </title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Styles</title>
 </head>
 
 <body>
@@ -127,5 +128,3 @@
 
 </body></html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="styles.css">
-<script src=""> </script>
