style guide fixes to anything with a color. Icons with border pop added to style guide. Red color pop added to CSS

--- a/styleGuide.html
+++ b/styleGuide.html
@@ -21,10 +21,26 @@
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam arcu turpis, elementum sed erat vel, tempus euismod tellus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed a fermentum ex, ac lacinia lacus. Sed eget purus suscipit, iaculis dolor nec, dictum ipsum. Fusce dictum fermentum faucibus. Phasellus mattis sapien a ex mattis, at eleifend nunc elementum. Nunc ut molestie nunc. Maecenas pellentesque quam et sem elementum congue. &lt;p&gt;
         </p>
-        <button id="green">#green</button>
-        <button id="lightBlue">#lightBlue</button>
-        <button id="purple">#purple</button>
+        <button class="green">#green</button>
+        <button class="lightBlue">#lightBlue</button>
+        <button class="darkBlue">#darkBlue</button>
+        <button class="red">#red</button>
+        <button class="lightRed">#lightRed</button>
+        <button class="purple">#purple</button>
         <button>Button</button>
+
+        <br><br>
+
+        <h2>Icon.color.borderPop</h2>
+        <div class="row">
+            <div class="icon green borderPop"></div>
+            <div class="icon lightBlue borderPop"></div>
+            <div class="icon darkBlue borderPop"></div>
+            <div class="icon red borderPop"></div>
+            <div class="icon lightRed borderPop"></div>
+            <div class="icon purple borderPop"></div>
+        </div>
+
 
         <form>
             <fieldset>
@@ -73,9 +89,9 @@
                     <div class="col">
                         <p>.row - Flex Box Row</p>
                         <div class="row">
-                            <div id="lightBlue">Cell1</div>
-                            <div id="green">Cell2</div>
-                            <div id="purple">Cell3</div>
+                            <div class="lightBlue">Cell1</div>
+                            <div class="green">Cell2</div>
+                            <div class="purple">Cell3</div>
                         </div>
                     </div>
                 </div>
@@ -83,9 +99,9 @@
                     <div class="col">
                         <p>.col - Flex Box Column</p>
                         <div class="col">
-                            <div id="lightBlue">Cell1</div>
-                            <div id="green">Cell2</div>
-                            <div id="purple">Cell3</div>
+                            <div class="lightBlue">Cell1</div>
+                            <div class="green">Cell2</div>
+                            <div class="purple">Cell3</div>
                         </div>
                     </div>
                 </div>
@@ -100,23 +116,24 @@
                 <span><i>.section</i></span>
             </div>
 
-            <h3>Colored IDs</h3>
+            <h3>Colored Classes</h3>
 
             <hr>
             <div class="row">
-                <div class="content" id="light">#light #ffffff</div>
-                <div class="content" id="dark02">#dark #333333</div>
-                <div class="content" id="tan">#tan #ECEBE4</div>
+                <div class="content light">#light #ffffff</div>
+                <div class="content dark02 light-txt">#dark #333333</div>
+                <div class="content tan">#tan #ECEBE4</div>
             </div>
 
             <div class="row">
-                <div class="content" id="green">#green #06D6A0</div>
-                <div class="content" id="lightBlue">#lightBlue #00BCD4</div>
-                <div class="content" id="darkBlue">#darkBlue #0097A7</div>
+                <div class="content green">#green #06D6A0</div>
+                <div class="content lightBlue">#lightBlue #00BCD4</div>
+                <div class="content darkBlue">#darkBlue #0097A7</div>
             </div>
             <div class="row">
-                <div class="content" id="red">#red #d60606</div>
-                <div class="content" id="purple">#purple #a47ac3</div>
+                <div class="content red">#red #d60606</div>
+                <div class="content lightRed">#lightRed #F26D6E</div>
+                <div class="content purple">#purple #a47ac3</div>
             </div>
 
 
